tests/contract_testcases/polkadot/inheritance/test_super_01.sol

        function f1() { super.a(); }
        
// ---- Expect: diagnostics ----
// error: 2:25-34: super not available outside contracts
